[package]
name = "discord_joke_bot"
version = "0.1.0"
authors = ["dionl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serenity]
default-features = false
features = [    
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache",
    "voice"
]
version = "0.10.4"

[dependencies.tokio]
version = "1.2.0"
features = [
    "rt-multi-thread"
]

[dependencies.songbird]
version = "0.1.4"
default-features = false
features = ["serenity-rustls", "gateway", "driver"]

[dependencies.mongodb]
version= "1.2.0"
default-features = false
features = ["sync"]